methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getCouleurSol() == Color.green)
  ^