methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

  avance();
  if (estFaceMur) { return false } 
  if (getCouleurSol() == Color.green)
  { return true}
}